# trading-bot

./: Cargo.toml  README.md
src/: main.rs  main_1.rs
