[package]
name = "trading-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
alpha_vantage = "0.11.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }